# matrices

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/matrix/: base_matrix.hxx  matrix.hxx  vector_matrix.hxx
src/: base_matrix.cxx  main.cxx  matrix.cxx  vector_matrix.cxx
tests/: CMakeLists.txt  test_int_vector_matrix.cxx  test_main.cxx
